--- a/gi-pro-mobile/www/templates/professionalWithServices.html
+++ b/gi-pro-mobile/www/templates/professionalWithServices.html
@@ -72,7 +72,7 @@
             <div class="row" ng-if="services && !services.length">
               <div class="col">{{'services_empty' | translate}}</div>
             </div>
-            <div class="item-accordion" ng-repeat="service in services" ng-click="toggleService(service.objectId)">
+            <div class="item-accordion" ng-repeat="service in services track by $index" ng-click="toggleService(service.objectId)">
               <ion-item class="item-accordion-header item-icon-right" ng-click="toggleService(service)">
                 <div class="title">{{getServiceNameByID(service.serviceType)}}</div>
                 <!--<i class="icon" ng-class="{'ion-chevron-down': !isExpandedService(service.objectId), 'ion-chevron-up': isExpandedService(service.objectId)}"></i>-->
